[package]
name = "rsi-flip"
version = "1.1.0"
edition = "2024"
repository = "https://github.com/Centronias/rsi-flip"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.58", features = ["derive"] }
image = "0.25.9"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
